refactor:mcp-web-app 폴더 내의 index.html 스타일  수정

--- a/poc/mcp-web-app/renderer/index.html
+++ b/poc/mcp-web-app/renderer/index.html
@@ -2,140 +2,217 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      http-equiv="Content-Security-Policy"
-      content="default-src 'self';
-                 script-src 'self' 'nonce-__NONCE__';
-                 style-src  'self' 'unsafe-inline';"
-    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MCP Desktop</title>
+    <title>Moca Chat</title>
     <style>
-      body,
-      html {
+      * {
+        box-sizing: border-box;
+      }
+
+      html,
+      body {
         margin: 0;
         padding: 0;
-        height: 100%;
         font-family: "Noto Sans KR", sans-serif;
-        background: #f7f7f8;
+        height: 100%;
+        background: #fff;
+        display: flex;
+      }
+
+      /* === Sidebar === */
+      .sidebar {
+        width: 240px;
+        background-color: #fdf8f5;
+        border-right: 1px solid #f0e9e4;
         display: flex;
         flex-direction: column;
-      }
-      header {
-        background: #343541;
-        color: #fff;
-        padding: 10px 20px;
-        font-size: 18px;
-        display: flex;
-        align-items: center;
         justify-content: space-between;
-        flex: 0 0 auto;
+        padding: 20px 0;
       }
-      header .left {
+
+      .sidebar h1 {
+        font-size: 20px;
+        font-weight: bold;
+        padding-left: 24px;
+        margin: 0 0 20px 0;
         display: flex;
         align-items: center;
-        gap: 10px;
-      }
-      header button {
-        background: #10a37f;
-        border: none;
-        color: #fff;
-        padding: 6px 12px;
-        border-radius: 4px;
-        cursor: pointer;
-        font-size: 14px;
-      }
-      header button:hover {
-        opacity: 0.9;
-      }
-      header #pathDisplay {
-        margin-left: 10px;
-        font-size: 14px;
-        color: #ccc;
-        max-width: 60%;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
+        gap: 8px;
       }
 
-      #chat {
-        flex: 1 1 auto;
-        overflow-y: auto;
-        padding: 20px;
+      .sidebar h1::before {
+        content: "☕";
+      }
+
+      .menu {
         display: flex;
         flex-direction: column;
-        gap: 12px;
-      }
-      .message {
-        max-width: 70%;
-        padding: 10px 14px;
-        border-radius: 8px;
-        line-height: 1.4;
-        word-break: break-word;
-        white-space: pre-wrap;
-      }
-      .message.user {
-        background: #acf2bd;
-        align-self: flex-end;
-      }
-      .message.assistant {
-        background: #fff;
-        align-self: flex-start;
-        border: 1px solid #e0e0e0;
+        gap: 10px;
+        padding-left: 24px;
       }
 
-      footer {
-        flex: 0 0 auto;
-        padding: 10px 20px;
-        background: #fff;
-        display: flex;
-        gap: 10px;
-        border-top: 1px solid #ddd;
-      }
-      #input {
-        flex: 1 1 auto;
-        resize: none;
-        padding: 10px;
-        border: 1px solid #ccc;
+      .menu button {
+        background: none;
+        border: none;
+        font-size: 15px;
+        padding: 8px 12px;
+        text-align: left;
+        cursor: pointer;
         border-radius: 6px;
-        font-size: 16px;
-        height: 50px;
+        color: #3b3b3b;
       }
+
+      .menu button.active {
+        background-color: #b37a64;
+        color: #fff;
+      }
+
+      .sidebar .bottom {
+        padding-left: 24px;
+        font-size: 14px;
+        color: #555;
+      }
+
+      /* === Main === */
+      .main {
+        flex: 1;
+        padding: 10px 60px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+      }
+
+      .main h2 {
+        font-size: 32px;
+        margin-bottom: 30px;
+        font-weight: 700;
+        color: #3b2f29;
+      }
+#chat {
+  flex: 1 1 auto;
+  overflow-y: auto;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  width: 100%; /* 💡 추가 */
+}
+
+/* 공통 메시지 스타일 */
+.message {
+  max-width: 70%;
+  padding: 10px 16px;
+  border-radius: 14px;
+  line-height: 1.5;
+  word-break: break-word;
+  white-space: pre-wrap;
+  font-size: 15px;
+}
+
+/* 사용자 말풍선 (오른쪽 정렬) */
+.message.user {
+  align-self: flex-end;
+  background-color: #b89585;
+  color: #3f3f3f;
+  border-top-right-radius: 4px; /* 오른쪽 위 모서리만 살짝 각지게 */
+}
+
+/* 어시스턴트 말풍선 (왼쪽 정렬) */
+.message.assistant {
+  align-self: flex-start;
+  background-color: #ffffff;
+  border: 1px solid #e0e0e0;
+  color: #333;
+  border-bottom-left-radius: 4px; /* 왼쪽 아래만 살짝 각지게 */
+}
+
+
+      .input-area {
+        display: flex;
+        align-items: center;
+        background: #f1f1f1;
+        border-radius: 14px;
+        padding: 16px 20px;
+        width: 640px;
+        box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.05);
+      }
+
+      #input {
+        flex: 1;
+        border: none;
+        background: transparent;
+        font-size: 16px;
+        resize: none;
+        outline: none;
+        height: auto;
+        min-height: 24px;
+        max-height: 200px;
+        overflow-y: auto;
+      }
+
       #sendBtn {
-        flex: 0 0 auto;
-        background: #10a37f;
+        background-color: #a36f56;
         border: none;
         color: #fff;
-        padding: 0 16px;
-        border-radius: 6px;
-        font-size: 16px;
+        font-size: 18px;
+        padding: 8px 12px;
+        border-radius: 8px;
+        margin-left: 12px;
         cursor: pointer;
       }
+
       #sendBtn:disabled {
         background: #ccc;
         cursor: default;
       }
+      .input-area #selectBtn {
+  background: none;
+  border: none;
+  font-size: 20px;
+  cursor: pointer;
+  margin-left: 8px;
+  color: #7c5d4c;
+  padding: 4px;
+  transition: transform 0.1s ease-in-out;
+}
+
+.input-area #selectBtn:hover {
+  transform: scale(1.1);
+}
+
+/* 선택된 경로를 작게 표시 */
+#pathDisplay {
+  font-size: 12px;
+  color: #888;
+  margin-top: 8px;
+  text-align: center;
+}
     </style>
   </head>
   <body>
-    <header>
-      <div class="left">
-        MCP Chat
-        <button id="selectBtn">파일 선택</button>
-        <span id="pathDisplay">선택된 파일 없음</span>
+    <!-- Sidebar -->
+    <div class="sidebar">
+      <div>
+        <h1>Moca</h1>
+        <div class="menu">
+          <button class="active">새 채팅방</button>
+        </div>
       </div>
-    </header>
-
-    <div id="chat"></div>
-
-    <footer>
-      <textarea
-        id="input"
-        placeholder="메시지를 입력하세요..."
-        rows="1"
-      ></textarea>
-      <button id="sendBtn" disabled>전송</button>
-    </footer>
+      <div class="bottom"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-settings-icon lucide-settings"><path d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.5a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"/><circle cx="12" cy="12" r="3"/></svg></div>
+    </div>
+    <div class="main">
+      <h2>Moca가 도와드릴게요</h2>
+      <!-- Main -->
+      <div id="chat"></div>
+      <div class="input-area">
+        <textarea id="input" placeholder="무엇을 도와드릴까요?"></textarea>
+        <button id="selectBtn" title="프로젝트 폴더 선택"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-folder-icon lucide-folder"><path d="M20 20a2 2 0 0 0 2-2V8a2 2 0 0 0-2-2h-7.9a2 2 0 0 1-1.69-.9L9.6 3.9A2 2 0 0 0 7.93 3H4a2 2 0 0 0-2 2v13a2 2 0 0 0 2 2Z"/></svg></button>
+        <button id="sendBtn" disabled><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-up-icon lucide-arrow-up"><path d="m5 12 7-7 7 7"/><path d="M12 19V5"/></svg></button>
+      </div>
+      <div id="pathDisplay">작업 디렉토리를 선택해주세요.</div>
+    </div>
 
     <script nonce="__NONCE__">
       const chat = document.getElementById("chat");
@@ -193,5 +270,6 @@
         }
       });
     </script>
+
   </body>
 </html>
